# example2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.cmd  build.sh  default.sh  xcode.sh
project/: CMakeLists.txt  cmake_default.sh  cmake_xcode.sh  default.sh
source/: main.cpp
